# dominari-arc

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SETUP.md  TODO.md  docker-compose.switchboard.yml  package.json  solana-local-validator.sh  start-oracle.sh  switchboard-config.json  switchboard.env  switchboard.json
assets/: component_urls.txt
assets/blueprints/features/: Healer.toml
assets/configs/: 2player.toml
client-nextjs/: next.config.js  package-lock.json  package.json
client-nextjs/components/: gameboard.tsx  header.tsx  map.tsx  menu.tsx  settings.tsx
client-nextjs/pages/: _app.tsx  admin.tsx  game.tsx  index.tsx  nfti.tsx
client-nextjs/pages/api/: nfti.ts
client-nextjs/public/assets/: chaincrisis.avif
client-nextjs/public/blueprints/: blueprints.json
client-nextjs/public/blueprints/features/: Healer.toml
client-nextjs/public/blueprints/mods/: Bandages.toml
client-nextjs/public/blueprints/units/: Raiders.toml  Scout.toml
client-nextjs/public/blueprints_all/: Scout.toml
client-nextjs/public/configs/: 2player.toml
client-nextjs/scripts/: blueprint.mjs
client-nextjs/styles/: Home.module.css  globals.css
client-nextjs/util/: constants.ts  interfaces.ts  util.ts
client-rs/: Cargo.toml
client-rs/src/: main.rs
client-ts/: admin.ts  nfti.ts  package.json
dominari-sdk/: Cargo.toml  bundler.sh  nodejs.sh
dominari-sdk/src/: blueprints.rs  component_schemas.rs  coreds.rs  dominari.rs  gamestate.rs  lib.rs  registry.rs  wasm_wrappers.rs
localhost_keypairs/: dominari-keypair.json  nfti-keypair.json
programs/arc/: Cargo.toml
programs/arc/src/: lib.rs
programs/clockwork/: Cargo.toml
programs/clockwork/src/: lib.rs
programs/clockwork/src/contexts/: hello_world.rs  initialize.rs
programs/dominari/: Cargo.toml
programs/dominari/src/: account.rs  component.rs  constant.rs  context.rs  error.rs  event.rs  lib.rs  state.rs
programs/nfti/: Cargo.toml
programs/nfti/src/: lib.rs
programs/registry/: Cargo.toml
programs/registry/src/: constant.rs  context.rs  lib.rs
scripts/: clockwork.sh  deploy.sh
tests/: arc.ts
