[package]
name = "dominari-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.26.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4.5"
console_error_panic_hook = "0.1.7"
toml = "0.5.9"
serde = { version="1.0.147", features=["derive"]}
core_ds = { path="../../../sol-arc/programs/core-ds", features=["no-entrypoint"]}
registry = { path="../programs/registry", features=["no-entrypoint"]}
dominari = { path="../programs/dominari", features=["no-entrypoint", "sdk"]}